[gd_scene load_steps=13 format=3 uid="uid://cyjxxlaxh0iu"]

[ext_resource type="Script" path="res://BolasRound.gd" id="1_6pnvu"]
[ext_resource type="Texture2D" uid="uid://6n1bwn4def0n" path="res://assets/sprites/towers/net_thrown.png" id="3_pft8x"]

[sub_resource type="AtlasTexture" id="AtlasTexture_trwhp"]
atlas = ExtResource("3_pft8x")
region = Rect2(0, 0, 37, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ycjh6"]
atlas = ExtResource("3_pft8x")
region = Rect2(37, 0, 37, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_dcsb0"]
atlas = ExtResource("3_pft8x")
region = Rect2(74, 0, 37, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5mtpc"]
atlas = ExtResource("3_pft8x")
region = Rect2(111, 0, 37, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_sbefe"]
atlas = ExtResource("3_pft8x")
region = Rect2(148, 0, 37, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vanvd"]
atlas = ExtResource("3_pft8x")
region = Rect2(185, 0, 37, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpyqd"]
atlas = ExtResource("3_pft8x")
region = Rect2(222, 0, 37, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_nilr3"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_trwhp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ycjh6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dcsb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5mtpc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sbefe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vanvd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpyqd")
}],
"loop": false,
"name": &"hit",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_t73wq"]
radius = 6.66667

[sub_resource type="CircleShape2D" id="CircleShape2D_va5rg"]
radius = 2.0

[node name="bolas" type="RigidBody2D"]
collision_layer = 0
collision_mask = 2
mass = 0.01
gravity_scale = 0.0
script = ExtResource("1_6pnvu")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-2.11758e-22, -1.26218e-29)
rotation = 1.5708
sprite_frames = SubResource("SpriteFrames_nilr3")
animation = &"hit"
autoplay = "default"
speed_scale = 4.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(3, 3)
shape = SubResource("CircleShape2D_t73wq")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_va5rg")
debug_color = Color(0.992157, 0, 0.266667, 0.34902)

[node name="Timer" type="Timer" parent="."]
process_callback = 0
wait_time = 1.5
one_shot = true
autostart = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
